# MyFullStackTemp2-FastApi

./: .env.sample  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: script.py.mako
backend/app/alembic/versions/: 3291024d8243_add_column_last_name_to_user_model.py  d29502eb5a00_two.py
backend/app/api/routes/: login.py  users.py
backend/app/core/: config.py
backend/app/tests/: conftest.py
backend/app/tests/crud/: test_user.py
