[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "emails>=0.6",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
]
